# HELLO4564564

./: README.md  readme.txt  中期检查报告_庞腾威_最终版.docx  任务书-庞腾威.docx  立项报告_庞腾威_1190303316_最终版.docx
MIP/hexapod_robot/: 1.lp  3.lp  Guass_ddistribution_function.m  creat_rectangle_region_con.m  get_data.m  get_points_by_mouse.m  humanoid_robot.m  plot_delta_XY.m  test_human_planning.m  初始解.mat  数据记录.xlsx
MIP/hexapod_robot/12_27/: 1.lp  2.lp  FWP.m  Gurobi_Interface.m  MATLAB.txt  readme.txt  傻逼求解器.docx
MIP/hexapod_robot/Convex_Hull/: 1.lp  Minkowski_sum.m  d_2.m  d_3.m  haha.m  test_my_Minkowski_sum.m  中期绘图.m  闵式和实验.pptx
MIP/hexapod_robot/Convex_Hull/readme/: readme.txt
MIP/hexapod_robot/HEXAPOD_MATLAB/: FootstepDesign.mat  GenerateSpecialTerrainMap2D.m  GenerateTerrainMap2D.m  GetIntersectionSector.m  GetLineAndCircleIntersection.m  GetMinInpolygonIntersection.m  GetTwoVectorIntersection.m  HEXAPOD.m  HEXAPOD_保存.m  HMI.mlapp  LEG.m  LEG保存.m  PlotWorkSplace.m  TERRAIN.m  TERRAIN_保存.m  TerrainMapConsiderFootMat1.mat  TerrainMapConsiderFootMatIncludingTouch1.mat  TrajectoryPlanning5.m  TrajectoryPlanning6.m  a.mat  demo.m  demo的其他版本.m  getSpecialFootstepMat.m  matrixA.m  matrixBody_Leg_保存.m  matrixT_保存.m  my_debug.m  plotSector_保存.m  processFootstepList.m
MIP/hexapod_robot/HEXAPOD_MATLAB/readme/: readme.txt
MIP/hexapod_robot/HEXAPOD_MATLAB/运动学约束/: DH2T.m  LEG.m  computer_P.m  data.txt  hexahedron_V.m  test.m  test2.m  test3.m  三维运动空间可视化.fig  二连杆运动空间可视化.fig  六面体体积scatter_失败.fig  获得雅克比矩阵.m
MIP/hexapod_robot/gurobi_save/: Gurobi_Interface_不用在意LP约束重名.m  Gurobi_Interface_没有处理LP重复名字.m  readme.txt  test_Gurobi_Interface.m
MIP/hexapod_robot/humanoid_robot/: creat_rectangle_region_con_has_z.m  humanoid_robot_has_z.m  plot_delta_XY_has_Z.m  test_human_planning_has_z.m  双足机器人思路.m  地形文件_MIT_review.m
MIP/hexapod_robot/humanoid_robot/have_not_z/: humanoid_robot.m  test_human_planning.m
MIP/hexapod_robot/humanoid_robot/中期检查使用/: MIT上台阶视频.m  creat_rectangle_region_con_has_z.m  humanoid_robot_has_z.m  步长1.fig  步长2.fig  绘制运动学约束.m  规划结果图片1.fig  规划结果图片2.fig
MIP/hexapod_robot/paper/IIT/: Quad_Footstep.m  Quad_FootstepPlan.m  Quad_MixedIntegerConvexProgram.m  Quad_MixedIntegerFootstepPlanningProblem.m  ral2017.m
MIP/hexapod_robot/paper/MIT/: 2022-Nov-14--11-44-26.lp  MixedIntegerConvexProgram.m  MixedIntegerFootstepPlanningProblem.m  Untitled.m  humanoids2014.m
MIP/hexapod_robot/quadruped_robot/: 2022-Nov-15--21-40-59.lp  2022-Nov-19--10-48-28.lp  Plot_Steps_Length.m  Quadruped_robot.m  Quadruped_robot_shrink_T.m  creat__QingXie_rectangle_region_con.m  creat_rectangle_region_con.m  test_Gurobi_Interface.m  test_Quadruped_robot.m  test_Quadruped_robot_shrink_T.m  场景代码.m
MIP/hexapod_robot/quadruped_robot_new_idea/: 1.lp  2.lp  3.lp  Gurobi_Interface.m  Quadruped_robot_New_idea.m  new_Steps_Length_plot.m  new_region.m  test_new_idea.m  步态切换1.m  步态切换2.m  环境.fig
MIP/hexapod_robot/quadruped_robot_new_idea/readme/: readme.txt
MIP/hexapod_robot/quadruped_robot_new_idea/result_save/: 两千秒结果保存.mat  步态切换2_N变大.mat  步态切换2_联合Trim_600s.mat  步态切换2结果.mat  步态切换2结果_优化时间更长.mat
MIP/hexapod_robot/quadruped_robot_new_idea/中期/: Quadruped_robot_New_idea.m  creat_rectangle_region_con_has_z.m  中期.m  中期_无剪枝视频.mat  剪枝步态可视.fig  无剪枝步态可视.fig  步态切换2_联合Trim_600s.mat
MIP/hexapod_robot/离散点/: 300秒的离散region约束.mat  get_distrete_points.m  直线决策前进_241点.mat  直线前进_18点.mat  直线前进_24点.mat  直线前进_均匀_42点.mat  直线前进_均匀_横向冗余_82点.mat  直线前进_均匀_横纵向冗余_246点.mat  直线前进_均匀_纵向冗余_126点.mat  绕弯决策前进_220点.mat  绕弯决策前进_220点_结果.mat  绕弯决策前进_83点.mat  绕弯决策前进_83点__结果.mat
robot_state_transition/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  haha.lp
robot_state_transition/include/: Bretl.hh  solve_LP_GLPK.hh  util.hh
robot_state_transition/src/: Bretl.cpp  CMakeLists.txt  solve_LP_GLPK.cpp
robot_state_transition/test/: CMakeLists.txt  testGLPK.cpp  test_Bretl.cpp  test_CWC_region.cpp
中期检查素材/Ubuntu/: Planning2.pptx  haha.py
结题简要资料/: 毕业结题.agx  程序框架图.vsdx
结题简要资料/dynamic_MCTS/devel/: .catkin  local_setup.sh
结题简要资料/dynamic_MCTS/src/hit_spider/: CMakeLists.txt  package.xml
结题简要资料/dynamic_MCTS/src/hit_spider/config/: 1_view_robot.rviz  walking_rviz.rviz
结题简要资料/dynamic_MCTS/src/hit_spider/config/terrain/: 中间空.txt  连续壕沟.txt  随机大块.txt
结题简要资料/dynamic_MCTS/src/hit_spider/include/hit_spider/: hexapod.hh  static_information.hh  util.hh
结题简要资料/dynamic_MCTS/src/hit_spider/include/hit_spider/MCTS/: MTree.hh  planning.hh  trajectory.hh
结题简要资料/dynamic_MCTS/src/hit_spider/include/hit_spider/robot_state_transition/: Bretl.hh  dynamic_constrain.hh  kinematics_constrain.hh  my_cdd.hh  solve_LP_GLPK.hh
结题简要资料/dynamic_MCTS/src/hit_spider/launch/: 1_view_robot_rviz.launch  2_test_main.launch  planning.launch  walking.launch
结题简要资料/dynamic_MCTS/src/hit_spider/model/gazebo/: gazebo.urdf.xacro
结题简要资料/dynamic_MCTS/src/hit_spider/model/meshes/: base_1.stl  base_2.stl  foot.stl  leg1.stl  leg2.stl  leg3.stl
结题简要资料/dynamic_MCTS/src/hit_spider/model/xacro/: EISpider.xacro  common.xacro
结题简要资料/dynamic_MCTS/src/hit_spider/model/xacro/base/: base.gazebo.xacro  base.xacro
结题简要资料/dynamic_MCTS/src/hit_spider/model/xacro/leg/: leg.gazebo.sensor.xacro  leg.transmission.xacro  leg.xacro
结题简要资料/dynamic_MCTS/src/hit_spider/msg/: hexapod_Base_Pose.msg  hexapod_State.msg
结题简要资料/dynamic_MCTS/src/hit_spider/src/: hexapod.cpp  main.cpp  static_information.cpp  static_information_publisher.cpp  util.cpp
结题简要资料/dynamic_MCTS/src/hit_spider/src/MCTS/: MTree.cpp  planning.cpp  trajectory.cpp  walkingNode.cpp
结题简要资料/dynamic_MCTS/src/hit_spider/src/robot_state_transition/: Bretl.cpp  dynamic_constrain.cpp  kinematics_constrain.cpp  my_cdd.cpp  solve_LP_GLPK.cpp
结题简要资料/报告/: 代码_纸质版.docx  快速蒙特卡洛树搜索算法伪代码.docx
结题简要资料/数据处理/: 运动学约束处理方法_速度性能对比.m
结题简要资料/数据处理/数据/Bretl时间测试/: 3Bretl_time2023_4_21_16_02_44.txt  3Bretl_time2023_4_21_16_02_47.txt  4Bretl_time2023_4_21_15_56_12.txt  4Bretl_time2023_4_21_15_56_17.txt  4Bretl_time2023_4_21_15_58_00.txt  4Bretl_time2023_4_21_15_58_03.txt  5Bretl_time2023_4_21_16_00_24.txt  data_process.m  (+3 more)
结题简要资料/视频/: 动态负载变换_视频.mkv  质心约束leg2_运动视频.mkv
(+283 files in other folders)
